--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
+    "node-cache": "^5.1.2",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
   },
