--- a/Client/package.json
+++ b/Client/package.json
@@ -26,7 +26,9 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.14",
     "xlsx-js-style": "^1.2.0"
   },
