--- a/Client/package.json
+++ b/Client/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.14",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
+    "emoji-mart": "^5.6.0",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "react": "^19.2.0",
@@ -30,7 +32,7 @@
     "react-router-dom": "^7.9.4",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
-    "socket.io-client": "^4.8.1",
+    "socket.io-client": "^4.8.2",
     "tailwindcss": "^4.1.14",
     "xlsx-js-style": "^1.2.0"
   },
