--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "socket.io": "^4.8.1",
+    "web-push": "^3.6.7",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
   },
